Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111898

Dependency update on qt/qtinterfaceframework is failing in dev

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • None
    • 6.6.0 FF
    • Qt Interface Framework
    • None
    • 81153f97d (dev)

    Description

      agent:2023/03/12 10:18:04 build.go:402: C:\Users\qt\work\qt\qtinterfaceframework\src\plugins\ifmedia\media_simulator\database_helper.h(66): error C2220: the following warning is treated as an error
      agent:2023/03/12 10:18:04 build.go:402: C:\Users\qt\work\qt\qtinterfaceframework\src\plugins\ifmedia\media_simulator\database_helper.h(66): warning C4996: 'QSqlDatabase::exec': QSqlQuery::exec() instead.
      agent:2023/03/12 10:18:04 build.go:402: C:\Users\qt\work\qt\qtinterfaceframework\src\plugins\ifmedia\media_simulator\database_helper.h(70): warning C4996: 'QSqlDatabase::exec': QSqlQuery::exec() instead.
      

      Build log: https://testresults.qt.io/logs/qt/qtinterfaceframework/ebd7a872fdfe697d18e8eaad948af98f0329c4fd/WindowsWindows_10_22H2x86_64WindowsWindows_10_22H2x86_64MSVC2019qtci-windows-10_22H2-x86_64-50-466109Conan_DebugAndRelease_Sccache_UseConfigure_WarningsAreErrors/2aa63b7da071c576c8bdb4f70be94418bdd1fcc2/build_1684396437/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtinterfaceframework/tasks/1684396421

      Tested changes (refs/builds/qtci/dev/1678615848):
      https://codereview.qt-project.org/c/qt/qtinterfaceframework/+/466231/2 Update dependencies on 'dev' in qt/qtinterfaceframework

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gagi Dominik Holland
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes