Fix 6.6 QSqlDatabase deprecations

Also, the db.commit() doesn't do anything as there is no transaction.

Task-number: QTBUG-111898
Change-Id: I42cde44cb405f42075b6943c82e82e976ebba338
Reviewed-by: Zoltan Gera <zoltan.gera@qt.io>
Reviewed-by: Robert Griebl <robert.griebl@qt.io>