src/plugins/ifmedia/media_simulator/database_helper.h
@@ -63,11 +63,13 @@ QSqlDatabase createDatabaseConnection(const QString &connectionName, const QStri
 void createMediaDatabase(const QString &dbFile)
 {
     QSqlDatabase db = createDatabaseConnection(QStringLiteral("main"), dbFile);
-    QSqlQuery query = db.exec(QStringLiteral("CREATE TABLE IF NOT EXISTS \"queue\" (\"id\" INTEGER PRIMARY KEY, \"qindex\" INTEGER, \"track_index\" INTEGER)"));
-    if (query.lastError().isValid())
-        qFatal("Couldn't create Database Tables: %s", qPrintable(query.lastError().text()));
+    QSqlQuery createQueue(db);
+    createQueue.exec(QStringLiteral("CREATE TABLE IF NOT EXISTS \"queue\" (\"id\" INTEGER PRIMARY KEY, \"qindex\" INTEGER, \"track_index\" INTEGER)"));
+    if (createQueue.lastError().isValid())
+        qFatal("Couldn't create Database Tables: %s", qPrintable(createQueue.lastError().text()));
 
-    query = db.exec("CREATE TABLE IF NOT EXISTS track "
+    QSqlQuery createTrack(db);
+    createTrack.exec("CREATE TABLE IF NOT EXISTS track "
                      "(id integer primary key, "
                      "trackName varchar(200), "
                      "albumName varchar(200), "
@@ -78,9 +80,8 @@ void createMediaDatabase(const QString &dbFile)
                      "coverArtUrl varchar(200),"
                      "UNIQUE(file))");
 
-    if (query.lastError().isValid())
-        qFatal("Couldn't create Database Tables: %s", qPrintable(query.lastError().text()));
-    db.commit();
+    if (createTrack.lastError().isValid())
+        qFatal("Couldn't create Database Tables: %s", qPrintable(createTrack.lastError().text()));
 }
 
 #endif // DATABASE_HELPER_H
